// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginsTermsOfService should render TOS message when Jetpack is selected 1`] = `
<p
  class="woocommerce-profiler-plugins-jetpack-agreement"
>
  By installing 
  <span>
    Jetpack
  </span>
   plugin for free you agree to our 
  <a
    class="components-external-link"
    data-link-type="external"
    href="https://wordpress.com/tos/"
    rel="external noreferrer noopener"
    target="_blank"
  >
    <span
      class="components-external-link__contents"
    >
      Terms of Service
    </span>
    <span
      aria-label="(opens in a new tab)"
      class="components-external-link__icon"
    >
      ↗
    </span>
  </a>
  .
</p>
`;

exports[`PluginsTermsOfService should render TOS message with multiple plugins when more than one plugin with TOS is selected 1`] = `
<p
  class="woocommerce-profiler-plugins-jetpack-agreement"
>
  By installing 
  <span>
    Jetpack
  </span>
  , 
  <span>
    WooCommerce Shipping
  </span>
  , and 
  <span>
    WooCommerce Tax
  </span>
   plugins for free you agree to our 
  <a
    class="components-external-link"
    data-link-type="external"
    href="https://wordpress.com/tos/"
    rel="external noreferrer noopener"
    target="_blank"
  >
    <span
      class="components-external-link__contents"
    >
      Terms of Service
    </span>
    <span
      aria-label="(opens in a new tab)"
      class="components-external-link__icon"
    >
      ↗
    </span>
  </a>
  .
</p>
`;

exports[`PluginsTermsOfService should render TOS message with multiple plugins when more than one plugin with TOS is selected 2`] = `
<p
  class="woocommerce-profiler-plugins-jetpack-agreement"
>
  By installing 
  <span>
    Jetpack
  </span>
  , 
  <span>
    WooCommerce Shipping
  </span>
  , and 
  <span>
    WooCommerce Tax
  </span>
   plugins for free you agree to our 
  <a
    class="components-external-link"
    data-link-type="external"
    href="https://wordpress.com/tos/"
    rel="external noreferrer noopener"
    target="_blank"
  >
    <span
      class="components-external-link__contents"
    >
      Terms of Service
    </span>
    <span
      aria-label="(opens in a new tab)"
      class="components-external-link__icon"
    >
      ↗
    </span>
  </a>
  .
</p>
`;
